css/new-age.css
/*!
 * Start Bootstrap - New Age v4.0.0-beta (http://startbootstrap.com/template-overviews/new-age)
 * Copyright 2013-2017 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-new-age/blob/master/LICENSE)
 */
html,
body {
  width: 100%;
  height: 100%; }

body {
  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif'; }

a {
  color: #fdcc52;
  -webkit-transition: all .35s;
  -moz-transition: all .35s;
  transition: all .35s; }
  a:hover, a:focus {
    color: #fcbd20; }

hr {
  max-width: 100px;
  margin: 25px auto 0;
  border-width: 1px;
  border-color: rgba(34, 34, 34, 0.1); }

hr.light {
  border-color: white; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
  font-weight: 200;
  letter-spacing: 1px; }

p {
  font-size: 18px;
  line-height: 1.5;
  margin-bottom: 20px; }

section {
  padding: 50px 0; }
  section h2 {
    font-size: 50px; }

#mainNav {
  border-color: rgba(34, 34, 34, 0.05);
  background-color: white;
  -webkit-transition: all .35s;
  -moz-transition: all .35s;
  transition: all .35s;
  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
  font-weight: 200;
  letter-spacing: 1px; }
  #mainNav .navbar-brand {
    color: #fdcc52;
    font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
    font-weight: 200;
    letter-spacing: 1px; }
    #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
      color: #fcbd20; }
  #mainNav .navbar-toggler {
    font-size: 12px;
    padding: 8px 10px;
    color: #222222; }
  #mainNav .navbar-nav > li > a {
    font-size: 11px;
    font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
    letter-spacing: 2px;
    text-transform: uppercase; }
    #mainNav .navbar-nav > li > a.active {
      color: #fdcc52 !important;
      background-color: transparent; }
      #mainNav .navbar-nav > li > a.active:hover {
        background-color: transparent; }
  #mainNav .navbar-nav > li > a,
  #mainNav .navbar-nav > li > a:focus {
    color: #222222; }
    #mainNav .navbar-nav > li > a:hover,
    #mainNav .navbar-nav > li > a:focus:hover {
      color: #fdcc52; }
  @media (min-width: 992px) {
    #mainNav {
      border-color: transparent;
      background-color: transparent; }
      #mainNav .navbar-brand {
        color: fade(white, 70%); }
        #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
          color: white; }
      #mainNav .navbar-nav > li > a,
      #mainNav .navbar-nav > li > a:focus {
        color: rgba(255, 255, 255, 0.7); }
        #mainNav .navbar-nav > li > a:hover,
        #mainNav .navbar-nav > li > a:focus:hover {
          color: white; }
      #mainNav.navbar-shrink {
        border-bottom-color: #fdcc52;
        border-bottom-style: solid;
        border-bottom-width: 2px;
        background-color: white;}      
        #mainNav.navbar-shrink .navbar-brand {
          color: #222222; }
          #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
            color: #fdcc52; }
        #mainNav.navbar-shrink .navbar-nav > li > a,
        #mainNav.navbar-shrink .navbar-nav > li > a:focus {
          color: #222222; }
          #mainNav.navbar-shrink .navbar-nav > li > a:hover,
          #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
            color: #fdcc52; } }

header.masthead {
  position: relative;
  width: 100%;
  padding-top: 150px;
  padding-bottom: 100px;
  color: white;
  background: url("../img/bg-pattern.png"), #2c3e50;
  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #2c3e50, #7f8c8d);
  background: url("../img/bg-pattern.png"), linear-gradient(to left, #2c3e50, #7f8c8d); }
  header.masthead .header-content {
    max-width: 500px;
    margin-bottom: 100px;
    text-align: center; }
    header.masthead .header-content h1 {
      font-size: 30px; }
  header.masthead .device-container {
    max-width: 325px;
    margin-right: auto;
    margin-left: auto; }
    header.masthead .device-container .screen img {
      border-radius: 3px; }
  @media (min-width: 992px) {
    header.masthead {
      height: 80vh;
      min-height: 619px;
      padding-top: 0;
      padding-bottom: 0; }
      header.masthead .header-content {
        margin-bottom: 0;
        text-align: left; }
        header.masthead .header-content h1 {
          font-size: 50px; }
      header.masthead .device-container {
        max-width: 325px; }
    }

section.download {
  position: relative;
  }
  section.download h2 {
    font-size: 50px;
    margin-top: 0; }
  section.download .badges .badge-link {
    display: block;
    margin-bottom: 25px; }
    section.download .badges .badge-link:last-child {
      margin-bottom: 0; }
    section.download .badges .badge-link img {
      height: 60px; }
    @media (min-width: 768px) {
      section.download .badges .badge-link {
        display: inline-block;
        margin-bottom: 0; } }
  @media (min-width: 768px) {
    section.download h2 {
      font-size: 70px; } }

section.features .section-heading {
  }
  section.features .section-heading h2 {
    margin-top: 0; }
  section.features .section-heading p {
    margin-bottom: 0; }

section.features .device-container,
section.features .feature-item {
  max-width: 325px;
  margin: 0 auto; }

section.features .device-container {
  margin-bottom: 100px; }
  @media (min-width: 992px) {
    section.features .device-container {
      margin-bottom: 0; } }

section.features .feature-item {
  padding-top: 50px;
  padding-bottom: 50px;
  text-align: center; }
  section.features .feature-item h3 {
    font-size: 30px; }
  section.features .feature-item i {
    font-size: 80px;
    display: block;
    margin-bottom: 15px;
    background: -webkit-linear-gradient(to left, #fdcc52, #fdc539);
    background: linear-gradient(to left, #fdcc52, #fdc539);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; }

section.cta {
  position: relative;
  padding: 150px 0;
  background-image: url("../img/city.jpeg");
  background-position: center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover; }
  section.cta .cta-content {
    position: relative;
    z-index: 1; }
    section.cta .cta-content h2 {
      font-size: 50px;
      max-width: 450px;
      margin-top: 0;
      margin-bottom: 25px;
      color: white; }
    @media (min-width: 768px) {
      section.cta .cta-content h2 {
        font-size: 75px; } }
  section.cta .overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5); }

section.contact {
  text-align: center; }
  section.contact h2 {
    margin-top: 0;
    margin-bottom: 25px; }
    section.contact h2 i {
      color: #dd4b39; }
  section.contact ul.list-social {
    margin-bottom: 0; }
    section.contact ul.list-social li a {
      font-size: 40px;
      line-height: 80px;
      display: block;
      width: 80px;
      height: 80px;
      color: white;
      border-radius: 100%; }
    section.contact ul.list-social li.social-twitter a {
      background-color: #1da1f2; }
      section.contact ul.list-social li.social-twitter a:hover {
        background-color: #fff; }
    section.contact ul.list-social li.social-facebook a {
      background-color: #3b5998; }
      section.contact ul.list-social li.social-facebook a:hover {
        background-color: #344e86; }
    section.contact ul.list-social li.social-google-plus a {
      background-color: #dd4b39; }
      section.contact ul.list-social li.social-google-plus a:hover {
        background-color: #d73925; }


footer {
  padding: 25px 0;
  text-align: center;
  color: rgba(255, 255, 255, 0.3);
  background-color: #2c3e50; }
  footer p {
    font-size: 12px;
    margin: 0; }
  footer ul {
    margin-bottom: 0; }
    footer ul li a {
      font-size: 12px;
      color: rgba(255, 255, 255, 0.3); }
      footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
        text-decoration: none; }

.bg-primary {
  background: #fdcc52;
  background: -webkit-linear-gradient(#fdcc52, #fdcc52);
  background: linear-gradient(#fdcc52, #fdcc52); }

.alt-color{
  color:#fdc539;
  background: #fdcc52;
  background: -webkit-linear-gradient(#fdcc52, #fdc539);
  background: linear-gradient(to left, #fdcc52, #fdc539)};


.text-primary {
  color: #fdcc52; }

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0; }

.btn-outline {
  color: white;
  border: 1px solid;
  border-color: white; }
  .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
    color: white;
    border-color: white;
    background-color: transparent; }

.btn {
  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
  letter-spacing: 2px;
  text-transform: uppercase; }


.btn-xl {
       font-size: 12px;
         padding: 17px 3px;
         width: 100%;
        margin-top: 15px;
         margin-bottom: 15px;
    }
  }

.bold-fonts{
  font-weight: bold;
}

.btn-primary, .btn-primary:hover{
  background-color: #fdcc52;
  border-color: white;
  color: black;
}

.bg-light-gray{
  background-color: #ecf0f1;
}

.project {
  width: 20rem;
  height: 20rem;
}

i{
  font-size: 50px;
  color:black;
}

.portfolio-pad{
  padding: 3rem 0;
}

.animated-hr {
  min-width: 100%;
  height: 3px;
}

.device-mockup>.device {
    width: 100%;
    height: 100%;
  }

.device-mockup.galaxy_s5{
  padding:0
}
  
a:focus {
    color: black;
}

.btn-primary:focus {
    box-shadow: 0 0 0 3px rgba(255, 219, 77,.5);
}
  
.grow {
  transition: all .2s ease-in-out;
}
.grow:hover {
  transform: scale(1.4);
}

.badge {
  font-size: 100%;
  margin: 3px;
  background-color: #2c3e50;
  border-bottom-color: #fdcc52;
  border-bottom-width: 2px;
  border-bottom-style: ridge;
}

.about-button{
  background-color: #2c3e50
}


.modal-dialog {
    max-width: 633px;
}

.logo-small{
  height: 38px;
  margin: 6px;
}

.business-card{
  height: 100px;
}

.contact-input{
  height: 37px;
  background-color:#C0C0C0;
  color:black;
  width: 75%;
}
.btn-outline-primary{
  color:  #34495e;
  border-color: #34495e;
}

.bg-alt-alt{
  background-color: #bfc5ca;
  color: black;
}
.bg-alt-alt:hover{
  background-color: #bfc5ca;
  color: black;
}

.project-buttons-container{
  display: flex;
  justify-content: center;
}

.project-buttons-container .btn{
  flex: 0 0 25%;
  margin: 5px
}

.project-button{
  padding: 5px
}

@media (min-width: 992px){
  .btn-xl {
        font-size: 12px;
        width: 300px;
        margin-top: 15px;
        margin-bottom: 15px;
    }
}

